--- a/samples/web/web.csproj
+++ b/samples/web/web.csproj
@@ -13,7 +13,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\core\core.csproj" />
     <ProjectReference Include="..\..\src\modules\Api\Api.csproj" />
-    <ProjectReference Include="..\..\src\modules\Identity\Identity.csproj" />
     <ProjectReference Include="..\..\src\modules\Message\Message.csproj" />
     <ProjectReference Include="..\..\src\modules\StaticFiles\StaticFiles.csproj" />
     <ProjectReference Include="..\..\src\modules\Data.Cache\Data.Cache.csproj" />
@@ -21,5 +20,6 @@
     <ProjectReference Include="..\..\src\modules\Data.FileSystem\Data.FileSystem.csproj" />
     <ProjectReference Include="..\..\src\modules\ExtensionBase\ExtensionBase.csproj" />
     <ProjectReference Include="..\..\src\modules\Data.Cache.Memcached\Data.Cache.Memcached.csproj" />
+    <ProjectReference Include="..\..\src\modules\Data.Mongo\Data.Mongo.csproj" />
   </ItemGroup>
 </Project>
