--- a/src/modules/Data.Mongo/Data.Mongo.csproj
+++ b/src/modules/Data.Mongo/Data.Mongo.csproj
@@ -1,19 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <PackageVersion>1.0.0</PackageVersion>
-    <PackageId>app.core.Extensions.Data.Mongo</PackageId>
-    <AssemblyName>app.core.Extensions.Data.Mongo</AssemblyName>
-    <RootNamespace>core.Extensions.Data.Mongo</RootNamespace>  
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Data\Data.csproj" />
-  </ItemGroup>
-
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<PackageVersion>1.0.1</PackageVersion>
+		<PackageId>app.core.Extensions.Data.Mongo</PackageId>
+		<AssemblyName>app.core.Extensions.Data.Mongo</AssemblyName>
+		<RootNamespace>core.Extensions.Data.Mongo</RootNamespace>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="MongoDB.Driver" Version="2.5.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Data\Data.csproj" />
+	</ItemGroup>
 </Project>
