MySql module with EF core

--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -37,13 +37,25 @@
         "options": {
           "connections": [
             {
-              "name": "default"
+              "name": "default",
+              "connectionString": ""
+            }
+          ]
+        }
+      },
+      "app.core.Extensions.Data.MySql": {
+        "priority": 2,
+        "options": {
+          "connections": [
+            {
+              "name": "default",
+              "connectionString": ""
             }
           ]
         }
       },
       "app.core.Extensions.Data.Mongo": {
-        "priority": 2,
+        "priority": 3,
         "options": {
           "connections": [
             {
