--- a/samples/web/web.csproj
+++ b/samples/web/web.csproj
@@ -22,5 +22,6 @@
     <ProjectReference Include="..\..\src\modules\Data.Cache.Memcached\Data.Cache.Memcached.csproj" />
     <ProjectReference Include="..\..\src\modules\Data.Mongo\Data.Mongo.csproj" />
     <ProjectReference Include="..\..\src\modules\Data.SqlServer\Data.SqlServer.csproj" />
+    <ProjectReference Include="..\..\src\modules\Data.MySql\Data.MySql.csproj" />
   </ItemGroup>
 </Project>
