--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,10 @@
-project.lock.json
-bin\
-obj\
+.dockerignore
+.env
+.git
+.gitignore
+.vs
+.vscode
+docker-compose.yml
+docker-compose.*.yml
+*/bin
+*/obj
