--- a/src/modules/Data/Data.csproj
+++ b/src/modules/Data/Data.csproj
@@ -1,12 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
-		<PackageVersion>1.0.1</PackageVersion>
+		<TargetFramework>netcoreapp2.1</TargetFramework>
+		<PackageVersion>1.0.2</PackageVersion>
 		<PackageId>app.core.Extensions.Data</PackageId>
 		<AssemblyName>app.core.Extensions.Data</AssemblyName>
 		<RootNamespace>core.Extensions.Data</RootNamespace>
-	</PropertyGroup>
+    <Authors>Massimo Di Paolo</Authors>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
+    <Description></Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>.net core 2.1</PackageReleaseNotes>    
+    <PackageTags></PackageTags>
+  </PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
 	</ItemGroup>
