--- a/src/modules/Api/Api.csproj
+++ b/src/modules/Api/Api.csproj
@@ -1,11 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <PackageVersion>1.0.1</PackageVersion>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <PackageVersion>1.0.2</PackageVersion>
     <PackageId>app.core.Extensions.Api</PackageId>
     <AssemblyName>app.core.Extensions.Api</AssemblyName>
-    <RootNamespace>core.Extensions.Api</RootNamespace>  
+    <RootNamespace>core.Extensions.Api</RootNamespace>
+    <Authors>Massimo Di Paolo</Authors>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
+    <Description></Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>.net core 2.1</PackageReleaseNotes>
+    <PackageTags></PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
