--- a/src/modules/Data.Cache.Memcached/Data.Cache.Memcached.csproj
+++ b/src/modules/Data.Cache.Memcached/Data.Cache.Memcached.csproj
@@ -1,27 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <PackageVersion>1.0.0</PackageVersion>
     <PackageId>app.core.Extensions.Data.Cache.Memcached</PackageId>
     <AssemblyName>app.core.Extensions.Data.Cache.Memcached</AssemblyName>
     <RootNamespace>core.Extensions.Data.Cache.Memcached</RootNamespace>
+    <Authors>Massimo Di Paolo</Authors>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
+    <Description></Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageTags>Memcached</PackageTags>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>.</OutputPath>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>.</OutputPath>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Remove="netcoreapp2.0\**" />
-    <EmbeddedResource Remove="netcoreapp2.0\**" />
-    <None Remove="netcoreapp2.0\**" />
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data.Cache\Data.Cache.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="EnyimMemcachedCore" Version="2.1.0.7" />
+    <PackageReference Include="EnyimMemcachedCore" Version="2.1.8" />
   </ItemGroup>
 </Project>
