--- a/src/modules/Data.EF.MySql/Data.EF.MySql.csproj
+++ b/src/modules/Data.EF.MySql/Data.EF.MySql.csproj
@@ -1,12 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<TargetFramework>netcoreapp2.1</TargetFramework>
 		<PackageVersion>1.0.0</PackageVersion>
 		<PackageId>app.core.Extensions.Data.EF.MySql</PackageId>
 		<AssemblyName>app.core.Extensions.Data.EF.MySql</AssemblyName>
 		<RootNamespace>core.Extensions.Data.EF.MySql</RootNamespace>
-	</PropertyGroup>
+    <Authors>Massimo Di Paolo</Authors>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
+    <Description></Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageTags></PackageTags>
+  </PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Data.EF\Data.EF.csproj" />
 	</ItemGroup>
