--- a/src/modules/Data.EF/Data.EF.csproj
+++ b/src/modules/Data.EF/Data.EF.csproj
@@ -1,7 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <PackageVersion>1.0.0</PackageVersion>
+    <PackageId>app.core.Extensions.Data.EF</PackageId>
+    <AssemblyName>app.core.Extensions.Data.EF</AssemblyName>
+    <RootNamespace>core.Extensions.Data.EF</RootNamespace>
+    <Authors>Massimo Di Paolo</Authors>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
+    <Description>DbContext and IRepository interface for EF-based extensions</Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageTags>DbContext Repository EF</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
