--- a/src/modules/ExtensionBase/ExtensionBase.csproj
+++ b/src/modules/ExtensionBase/ExtensionBase.csproj
@@ -1,25 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<TargetFramework>netcoreapp2.1</TargetFramework>
 		<PackageVersion>2.0.1</PackageVersion>
 		<PackageId>app.core.Extensions.Base</PackageId>
 		<AssemblyName>app.core.Extensions.Base</AssemblyName>
-		<Authors>Massimo Di Paolo</Authors>
+    <RootNamespace>core.Extensions.Base</RootNamespace>
+    <Authors>Massimo Di Paolo</Authors>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
 		<Description>Base extension module, derived from ExtCore by Dmitry Sikorsky</Description>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-		<Copyright>Copyright 2017 (c) Massimo Di Paolo. All rights reserved.</Copyright>
-		<PackageTags>extension base</PackageTags>
-		<RootNamespace>core.Extensions.Base</RootNamespace>
+    <PackageReleaseNotes>.net core 2.1</PackageReleaseNotes>		
+		<PackageTags>extension base</PackageTags>		
 		<PreBuildEvent />
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="Extension.cs" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.0.3" />
-		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.2" />
-		<PackageReference Include="System.ValueTuple" Version="4.4.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.1" />
+		<PackageReference Include="System.ValueTuple" Version="4.5.0" />
 		<PackageReference Include="ExtCore.Infrastructure" Version="3.2.0" />
 		<PackageReference Include="ExtCore.Events" Version="3.2.0" />
 	</ItemGroup>
