--- a/src/modules/Message/Message.csproj
+++ b/src/modules/Message/Message.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <PackageVersion>1.0.0</PackageVersion>
     <PackageId>app.core.Extensions.Message</PackageId>
-    <AssemblyName>app.core.Extensions.Message</AssemblyName>    
+    <AssemblyName>app.core.Extensions.Message</AssemblyName>
+    <RootNamespace>core.Extensions.Message</RootNamespace>
     <Authors>Massimo Di Paolo</Authors>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>Send/Receive message via email</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>First release</PackageReleaseNotes>
-    <Copyright>Copyright 2017 (c) Massimo Di Paolo. All rights reserved.</Copyright>
-    <PackageTags>extension message, email, smtp</PackageTags>
-    <RootNamespace>core.Extensions.Message</RootNamespace>
+    <PackageTags>extension message, email, smtp</PackageTags>    
   </PropertyGroup>
 
   <PropertyGroup>
