--- a/src/modules/StaticFiles/StaticFiles.csproj
+++ b/src/modules/StaticFiles/StaticFiles.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <PackageVersion>1.0.0</PackageVersion>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <PackageVersion>1.0.1</PackageVersion>
     <PackageId>app.core.Extensions.StaticFiles</PackageId>
     <AssemblyName>app.core.Extensions.StaticFiles</AssemblyName>
+    <RootNamespace>core.Extensions.StaticFiles</RootNamespace>
     <Authors>Massimo Di Paolo</Authors>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>This extension enables the web app to serve static files. A physical file provider is used.</Description>    
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>First release</PackageReleaseNotes>    
-    <Copyright>Copyright 2017 (c) Massimo Di Paolo. All rights reserved.</Copyright>
-    <PackageTags>static files staticfiles </PackageTags>
-    <RootNamespace>core.Extensions.StaticFiles</RootNamespace>
+    <PackageReleaseNotes>.net core 2.1</PackageReleaseNotes>        
+    <PackageTags>static files staticfiles </PackageTags>    
   </PropertyGroup>
 
   <PropertyGroup>
@@ -20,8 +20,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.3" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
