--- a/src/modules/Spa/Spa.csproj
+++ b/src/modules/Spa/Spa.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>1.0.1</PackageVersion> 
     <PackageId>app.core.Extensions.Spa</PackageId>
     <AssemblyName>app.core.Extensions.Spa</AssemblyName>
     <RootNamespace>core.Extensions.Spa</RootNamespace>
@@ -10,13 +10,13 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>First release</PackageReleaseNotes>
+    <PackageReleaseNotes>Execute order</PackageReleaseNotes>
     <PackageTags>spa, single page application</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="2.1.1" />
-  </ItemGroup>
+  </ItemGroup>  
 
   <ItemGroup>
     <ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
