Inject App configuration monitor; Merge/Query methods Mongo,FileSystem;

--- a/samples/web/app-settings.json
+++ b/samples/web/app-settings.json
@@ -1,6 +1,3 @@
 ﻿{
-  "Modules": {
-    // Please keep in mind that you have to change '\' to '/' on Linux-based systems
-    "Path": "Extensions"
-  }
+  "appConfig":  {}
 }
