--- a/src/modules/StaticFiles/StaticFiles.csproj
+++ b/src/modules/StaticFiles/StaticFiles.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <PackageVersion>1.0.1</PackageVersion>
+    <PackageVersion>1.0.2</PackageVersion>
     <PackageId>app.core.Extensions.StaticFiles</PackageId>
     <AssemblyName>app.core.Extensions.StaticFiles</AssemblyName>
     <RootNamespace>core.Extensions.StaticFiles</RootNamespace>
@@ -10,8 +10,8 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>This extension enables the web app to serve static files. A physical file provider is used.</Description>    
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>.net core 2.1</PackageReleaseNotes>        
-    <PackageTags>static files staticfiles </PackageTags>    
+    <PackageReleaseNotes>Enable absolute,shared network paths</PackageReleaseNotes>        
+    <PackageTags>static files staticfiles </PackageTags>     
   </PropertyGroup>
 
   <PropertyGroup>
