--- a/src/modules/Data.Cache/Data.Cache.csproj
+++ b/src/modules/Data.Cache/Data.Cache.csproj
@@ -2,7 +2,7 @@
   
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <PackageVersion>1.0.3</PackageVersion>    
+    <PackageVersion>1.0.4</PackageVersion>    
     <PackageId>app.core.Extensions.Data.Cache</PackageId>
     <AssemblyName>app.core.Extensions.Data.Cache</AssemblyName>
     <RootNamespace>core.Extensions.Data.Cache</RootNamespace>
@@ -10,9 +10,13 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Query / Merge methods</PackageReleaseNotes>
+    <PackageReleaseNotes>fix Redis dependency</PackageReleaseNotes>
     <PackageTags></PackageTags> 
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.1.1" />
+  </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
